	There are many more left.

	* xkb/Makefile.am:
	* xkb/xkbconfig.c:
	* xkb/ddxConfig.c:
	* xkb/xkbInit.c:
	* hw/xgl/glx/xglx.c:
	* hw/xnest/Keyboard.c:
	Remove weirdo XkbCF pre-configuration code.

	* xkb/xkb.h:
	* xkb/xkb.c:
	Remove INITARGS braindamage, change to void; add XkbExtensionInit
	prototype to xkb.h.
	Explicitly initialise nTypes in xkb.c.

	* xkb/xkbfmisc.c:
	* xkb/maprules.c:
	Bug #3819: Remove open-coding of strcasecmp.

	* xkb/ddxVT.c:
	* xkb/ddxPrivate.c:
	* xkb/ddxKillSrv.c:
	* hw/xfree86/dixmods/Makefile.am:
	* hw/xfree86/dixmods/xkbVT.c:
	* hw/xfree86/dixmods/xkbPrivate.c:
	* hw/xfree86/dixmods/xkbKillSrv.c:
	Move XFree86 DDX actions out of xkb/ and into proper files in their
	own right in dixmods.

2006-03-25  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Bus.c:
	* hw/xfree86/common/xf86Configure.c:
	* hw/xfree86/common/xf86Cursor.c:
	* hw/xfree86/common/xf86DGA.c:
	* hw/xfree86/common/xf86DPMS.c:
	* hw/xfree86/common/xf86Debug.c:
	* hw/xfree86/common/xf86Events.c:
	* hw/xfree86/common/xf86Globals.c:
	* hw/xfree86/common/xf86Helper.c:
	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/common/xf86Io.c:
	* hw/xfree86/common/xf86MiscExt.c:
	* hw/xfree86/common/xf86Mode.c:
	* hw/xfree86/common/xf86Option.c:
	* hw/xfree86/common/xf86RandR.c:
	* hw/xfree86/common/xf86Versions.c:
	* hw/xfree86/common/xf86VidMode.c:
	* hw/xfree86/common/xf86Xinput.c:
	* hw/xfree86/common/xf86cmap.c:
	* hw/xfree86/common/xf86fbBus.c:
	* hw/xfree86/common/xf86fbman.c:
	* hw/xfree86/common/xf86isaBus.c:
	* hw/xfree86/common/xf86noBus.c:
	* hw/xfree86/common/xf86pciBus.c:
	* hw/xfree86/common/xf86sbusBus.c:
	* hw/xfree86/common/xf86xv.c:
	* hw/xfree86/common/xf86xvmc.c:
	* hw/xfree86/common/xisb.c:
	* hw/xfree86/dummylib/xf86addrestolist.c:
	* hw/xfree86/dummylib/xf86allocscripi.c:
	* hw/xfree86/dummylib/xf86drvmsg.c:
	* hw/xfree86/dummylib/xf86drvmsgverb.c:
	* hw/xfree86/dummylib/xf86errorf.c:
	* hw/xfree86/dummylib/xf86errorfverb.c: