@@ -26,13 +26,13 @@ XkbDDXPrivate(DeviceIntPtr dev,KeyCode key,XkbAction *act)
     if (xf86act->type == XkbSA_XFree86Private) {
         memcpy(msgbuf, xf86act->data, XkbAnyActionDataSize);
         msgbuf[XkbAnyActionDataSize]= '\0';
-        if (_XkbStrCaseCmp(msgbuf, "-vmode")==0)
+        if (strcmp(msgbuf, "-vmode")==0)
             xf86ProcessActionEvent(ACTION_PREV_MODE, NULL);
-        else if (_XkbStrCaseCmp(msgbuf, "+vmode")==0)
+        else if (strcmp(msgbuf, "+vmode")==0)
             xf86ProcessActionEvent(ACTION_NEXT_MODE, NULL);
-        else if (_XkbStrCaseCmp(msgbuf, "ungrab")==0)
+        else if (strcmp(msgbuf, "ungrab")==0)
             xf86ProcessActionEvent(ACTION_DISABLEGRAB, NULL);
-        else if (_XkbStrCaseCmp(msgbuf, "clsgrb")==0)
+        else if (strcmp(msgbuf, "clsgrb")==0)
             xf86ProcessActionEvent(ACTION_CLOSECLIENT, NULL);
         else
             xf86ProcessActionEvent(ACTION_MESSAGE, (void *) msgbuf);
