@@ -17,4 +17,7 @@
 /* XKB output dir for compiled keymaps. */
 #undef XKM_OUTPUT_DIR
 
+/* Do not have `strcasecmp'. */
+#undef NEED_STRCASECMP
+
 #endif /* _XKB_CONFIG_H_ */
